# v81

./: .gitignore  .replit  ANALYSIS_REPORT.md  QUICK_DEPLOY.sh  SEO_AUDIT_15.11.2025.md  app.py  app.py.backup  app.py.backup2  app.py.backup_1763536271  app.py.backup_bonus_fix  app.py.backup_districts_fix  app.py.batch_backup  app.py.before_balance_api  app.py.restore_point  backfill_address_fields.py  check_dadata_usage.py  correct_endpoints.txt  current_packages.txt  demo_auto_geocoding.py  email_service.py  enrich_all_properties.py  fix_api_endpoints.py  fix_endpoints_final.py  import_building_names.py  import_building_names_sql.py  migrate_database.py  migrate_external_db.py  migrate_full_database.py  migrate_with_pgdump.py  models.py  nearby_auto_updater.py  nearby_daemon.py  nearby_places.py  phone_utils.py  pyproject.toml  replit.md  requirements.txt  requirements.txt.backup  run_nearby_updater.sh  security_config.py  (+9 more)
attached_assets/: 1_1755379537152.txt  40-let-pobedy_1754335274176.php  9i-kilometr_1754334922876.php  9i-kilometr_1754335274176.php  Pasted---1755048077261_1755048077262.txt  Pasted---1761503624353_1761503624353.txt  Pasted---1763229523367_1763229523368.txt  Pasted--2024-2005-450--1754341455876_1754341455876.txt  Pasted--64-cdn-tailwindcss-com-should-not-be-used-in-production-To-use-Tailwind-CSS-in-production--1759320740003_1759320740003.txt  Pasted--64-cdn-tailwindcss-com-should-not-be-used-in-production-To-use-Tailwind-CSS-in-production--1759321481884_1759321481885.txt  Pasted--Coframe-Replit-Enterprise-watcher-loaded-ingest-app-co_1765822056422.txt  (+349 more)
(+552 files in other folders)
